# bystronic

./: .coverage  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  bereinigungsprotokoll.json  coverage.xml  export_zusammenfassung.csv  maschinendaten.json  monatliche_trends.csv  pivot_produktionszeit.csv  produktionsanalyse_zusammenfassung.csv  pyproject.toml  qualitaetsanalyse.csv  schmutzige_daten.csv  uebung_01_ergebnisse.csv
.claude/: settings.local.json
.claude/commands/: commit.md
.github/prompts/: commit.prompt.md
.github/workflows/: ui-tests.yml
.windsurf/rules/: commit.md
.windsurf/workflows/: commit.md  markdown-formatting.md
data/: README.md
data/examples/: problem_encoding.csv  problem_missing.csv  problem_mixed.csv  sample_semicolon.csv  sample_standard.csv  sample_tab.csv
data/large/: V084_Scope.csv
data/samples/: produktionsdaten.csv
data/uebungen/csv_basics/: data_with_missing.csv  german_format.csv  problematic_data.csv  standard_data.csv  tab_separated.csv
docs/: markdown-richtlinien.adoc  testing_guide.adoc
src/01_grundlagen/: 01_python_grundlagen.adoc  README.md
src/01_grundlagen/beispiele/: hello_world.py  vba_vs_python.py
src/01_grundlagen/uebungen/: uebung_01_personal_info.py  uebung_02_taschenrechner.py  uebung_03_programmiersprachen.py
src/02_datentypen/: 02_datentypen.ipynb  README.md
src/02_datentypen/beispiele/: collections_demo.py  numbers_demo.py  strings_demo.py  vba_collections_comparison.py
src/02_datentypen/uebungen/: uebung_01_zahlen.py  uebung_02_strings.py  uebung_03_collections.py  uebung_04_conversion.py
src/03_numpy/: 03_numpy.ipynb  README.md
src/03_numpy/beispiele/: array_manipulation.py  arrays_demo.py  linear_algebra.py  mathematical_operations.py  vba_vs_numpy.py
src/03_numpy/uebungen/: uebung_01_arrays.py  uebung_02_math.py  uebung_03_analysis.py  uebung_04_linalg.py
src/04_pandas/: 04_pandas.ipynb  README.md
src/04_pandas/beispiele/: data_analysis.py  data_cleaning.py  data_import_export.py  dataframe_basics.py  vba_vs_pandas.py
src/04_pandas/uebungen/: uebung_01_dataframe_basics.py  uebung_02_data_import.py  uebung_03_data_cleaning.py  uebung_04_data_analysis.py
src/05_visualisierung/: README.md
src/06_datenimport/: README.md  datenimport_tutorial.ipynb
src/07_jupyter/: 07_jupyter.adoc  README.md
src/08_ui/: README.md
src/09_projekte/grafik/: REQ.md  (+2 more)
tests/: README_08_ui_tests.md  README_datenimport_tests.md  README_datentypen_tests.md  README_grundlagen_tests.md  README_jupyter_tests.md  README_numpy_tests.md  README_pandas_tests.md  README_uv_tests.md  __init__.py  conftest.py  conftest_06_datenimport.py  test_01_grundlagen.py  test_02_datentypen.py  test_03_numpy.py  test_04_pandas.py  test_06_datenimport.py  test_07_jupyter.py  test_08_ui.py  test_08_ui_pyqt_specific.py  test_08_ui_simple.py  test_08_ui_streamlit_specific.py  test_08_ui_utils.py
(+42 files in other folders)
